--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -33,6 +33,7 @@
   }
 
   p {
+    width: 100%;
     position: absolute;
     bottom: -7%;
     left: 50%;
@@ -42,5 +43,10 @@
     opacity: 0.7;
     letter-spacing: 0.5px;
     color: rgb(244, 41, 95);
+
+    @media screen and (max-width: 480px) {
+      font-size: 2.8rem;
+      bottom: -10%;
+    }
   }
 }
